fix styles on iphone x

--- a/src/theme/georgia.style/style.scss
+++ b/src/theme/georgia.style/style.scss
@@ -4078,8 +4078,8 @@ ion-content, body.overflow {
   .u2g-sidebar__logo {
     width: 100%;
     max-width: 400px;
-    padding: 15px 25px;
-    margin: 10px auto 0; }
+    padding: 25px 25px 0;
+    margin: 20px auto 0; }
   .u2g-sidebar__links {
     display: -webkit-box;
     display: -webkit-flex;
@@ -7308,7 +7308,7 @@ svg {
 }
 
 .ios-header-padding {
-  padding-top: 15px;
+  padding-top: 30px;
 }
 
 .android_platform_header {
